# mail-client

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  auth_store.rs  commands.rs  config.rs  constants.rs  email.rs  error.rs  lib.rs  main.rs  util.rs
src/lib/: commands.ts  navigation.ts  types.ts  utils.ts
src/lib/components/custom/: MailEnvelope.svelte  address-badge.svelte  address-display.svelte  address-input.svelte  loading-spinner.svelte
src/lib/mail/: account.svelte.ts  mailbox.svelte.ts  message.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(main)/: +page.ts
src/routes/(main)/[account]/: +layout.svelte  +layout.ts  Mailbox.svelte  app-sidebar.svelte
src/routes/(main)/[account]/[mailbox]/: +layout.ts
src/routes/(main)/[account]/[mailbox]/[[uid]]/: +page.svelte  +page.ts  Envelope.svelte  EnvelopeList.svelte  Message.svelte  envelope-list.svelte  message-editor.svelte  message.svelte
src/routes/(standalone)/add-account/: +page.svelte
src/routes/mail/: +page.svelte  Mailbox.svelte  MailboxList.svelte
src/routes/mail/new/: +page.svelte
