[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "mail-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "mail_client_lib"

[build-dependencies]
dotenv = "0.15.0"
tauri-build = {version = "2", features = [] }

[dependencies]
axum = {version = "0.6.12", features = ["headers"] }
chrono = "0.4.40"
imap = "2.4.1"
keyring = {version = "3.6.2", features = ["apple-native", "windows-native"] }
lettre = "0.11.15"
mail-parser = "0.10.2"
native-tls = "0.2.14"
oauth2 = "5.0.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-opener = "2"
utf7-imap = "0.3.2"
uuid = {version = "1.17.0", features = ["v4"] }

[dependencies.reqwest]
features = ["json", "blocking"]
version = "0.12.15"
